refactor login validating